# tl2cgen

./: .clang-format  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: coverage-tests.yml  linux-wheel-builder.yml  macos-wheel-builder.yml  misc-tests.yml  windows-wheel-builder.yml
cmake/: Doxygen.cmake  ExternalLibs.cmake  Sanitizer.cmake  TL2cgenConfig.cmake.in  Utils.cmake  Version.cmake  version.h.in
cmake/modules/: FindASan.cmake  FindLSan.cmake  FindTSan.cmake  FindUBSan.cmake
dev/: change_version.py  prepare_pypi_release.py  run_pylint.py
docs/: Doxyfile.in  api.rst  compiler_param.rst  conf.py  index.rst  install.rst  requirements.txt  tl2cgen-doxygen.rst  treelite-migration.rst
docs/_static/css/: custom.css
docs/tutorials/: deploy.rst  deploy_java.rst  first.rst  index.rst  optimize.rst
include/tl2cgen/: annotator.h  c_api.h  c_api_common.h  c_api_error.h  c_api_runtime.h  compiler.h  compiler_param.h  data_matrix.h  data_matrix_type.h  data_matrix_types.h  error.h  logging.h  predictor.h  predictor_types.h  thread_local.h
include/tl2cgen/detail/: data_matrix_impl.h  filesystem.h  math_funcs.h  operator_comp.h
include/tl2cgen/detail/compiler/: ast_native.h  elf_formatter.h  failsafe.h  postprocessor.h  pred_transform.h
include/tl2cgen/detail/compiler/ast/: ast.h  builder.h
include/tl2cgen/detail/compiler/codegen/: codegen.h  format_util.h
include/tl2cgen/detail/compiler/templates/: code_folder_template.h  header_template.h  main_template.h  postprocessor.h  pred_transform.h  qnode_template.h  typeinfo.h
include/tl2cgen/detail/compiler/util/: categorical_bitmap.h  code_folding_util.h  format_util.h
include/tl2cgen/detail/predictor/: predictor_impl.h  shared_library.h
include/tl2cgen/detail/threading_utils/: omp_config.h  omp_exception.h  omp_funcs.h  parallel_for.h
java_runtime/: CMakeLists.txt  README.md
java_runtime/tl2cgen4j/: create_jni.py  pom.xml
java_runtime/tl2cgen4j/src/main/java/ml/dmlc/treelite4j/java/: DMatrix.java  DMatrixBuilder.java  NativeLibLoader.java  Predictor.java  TL2cgenError.java  TL2cgenJNI.java
java_runtime/tl2cgen4j/src/main/scala/ml/dmlc/tl2cgen4j/: DataPoint.scala  DataPointFloat64.scala
java_runtime/tl2cgen4j/src/main/scala/ml/dmlc/tl2cgen4j/scala/: Predictor.scala
java_runtime/tl2cgen4j/src/main/scala/ml/dmlc/tl2cgen4j/scala/spark/: TL2cgenModel.scala
java_runtime/tl2cgen4j/src/native/: tl2cgen4j.cpp  tl2cgen4j.h
java_runtime/tl2cgen4j/src/test/java/ml/dmlc/tl2cgen4j/java/: DMatrixTest.java  PredictorTest.java
java_runtime/tl2cgen4j/src/test/resources/mushroom_example/: mushroom.c
java_runtime/tl2cgen4j/src/test/scala/ml/dmlc/tl2cgen4j/scala/: PredictorTest.scala  TL2cgenModelTest.scala
ops/: build-linux.sh  build-macos.sh  build-windows.bat  cpp-python-coverage.sh  macos-python-coverage.sh  test-java.sh  test-linux-python-wheel.sh  test-macos-python-wheel.sh  test-sdist.sh  test-win-python-wheel.bat  win-python-coverage.bat
ops/conda_env/: dev.yml  macos_build.yml
ops/docker/: Dockerfile.cpu  ci_build.sh
ops/scripts/: build_macos_python_wheels.sh  rename_whl.py
python/: .pylintrc  README.rst  pyproject.toml
python/packager/: build_config.py  nativelib.py  pep517.py
python/tl2cgen/: __init__.py  core.py  create_shared.py  data.py  dtypes.py  exception.py  generate_makefile.py  handle_class.py  libloader.py  libpath.py  predictor.py  shortcuts.py  util.py
python/tl2cgen/contrib/: __init__.py  create_shared.py  gcc.py  msvc.py  util.py
src/: .clang-format  CMakeLists.txt  annotator.cc  filesystem.cc  logging.cc
src/c_api/: c_api.cc  c_api_common.cc  c_api_error.cc  c_api_runtime.cc  c_api_treelite_bridge.cc
src/compiler/: ast_native.cc  compiler.cc  compiler_param.cc  elf_formatter.cc  failsafe.cc  postprocessor.cc  pred_transform.cc
src/compiler/ast/: build.cc  dump.cc  is_categorical_array.cc  load_data_counts.cc  quantize.cc  split.cc
src/compiler/ast/builder/: build.cc  dump.cc  fold_code.cc  is_categorical_array.cc  load_data_counts.cc  quantize.cc  split.cc
src/compiler/codegen/: codegen.cc  condition_node.cc  function_node.cc  main_node.cc  output_node.cc  postprocessor.cc  quantizer_node.cc  translation_unit_node.cc
src/compiler/templates/: code_folder_template.cc  header_template.cc  main_template.cc  postprocessor.cc  pred_transform.cc  qnode_template.cc
src/predictor/: predictor.cc  shared_library.cc
tests/cpp/: CMakeLists.txt  test_compiler_param.cc  test_main.cc  test_threading_utils.cc
tests/python/: conftest.py  hypothesis_util.py  metadata.py  test_basic.py  test_code_folding.py  test_invalid_categorical_input.py  test_lightgbm_integration.py  test_model_builder.py  test_model_query.py  test_sklearn_integration.py  test_xgboost_integration.py  util.py
